tests/baselines/reference/project/nonRelative/amd/nonRelative.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
consume.ts(11,18): error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decl.ts (0 errors) ====
    export function call() {
        return "success";    
    }
==== b.ts (0 errors) ====
    export function hello() { }
    
==== a.ts (0 errors) ====
    import b = require("lib/foo/b");
    export function hello() { }
    
==== a.ts (0 errors) ====
    export function hello() { }
    
==== consume.ts (1 errors) ====
    import mod = require("decl");
    import x = require("lib/foo/a");
    import y = require("lib/bar/a");
    
    x.hello();
    y.hello();
    
    var str = mod.call();
    
    
    declare function fail();
                     ~~~~
!!! error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.
    if(str !== "success") {
        fail();
    }